[package]
name = "rust_book_code"
version = "0.1.0"
edition = "2021"
description = "The code of rust book"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
