[package]
name = "rust_book_code"
version = "0.2.1"
edition = "2021"
description = "The code of rust book"
license = "MIT OR Apache-2.0"
repository = "https://github.com/XuGuangnian/rust-book-code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
blog = { path = "../blog" }


